# ChangeLog for net-im/gtwitter
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  01 Dec 2008; Sergio D. Rodríguez Inclan (ZeRoX) <srinclan@gmail.com>
  +gtwitter-0.2.4.ebuild, +metadata.xml:
  New Ebuild for bug 249200 thanks to Tommy and Serkan
