@@ -1,4 +1,4 @@
 DIST gtwitter-0.2.4.tar.gz 88730 RMD160 5949f693541a2a3700b5cc806b53537d343c93c5 SHA1 7c83f625a12f95ac78d5d704722456db87b93811 SHA256 2573624273b25aa3f12d85eceb8ce1044378bb4b57a17869028e88fc2d0cc5b6
-EBUILD gtwitter-0.2.4.ebuild 612 RMD160 669bd408d879f5b6a0bdd95e2d3f8659b37e574c SHA1 bfe3611e068d43178fb4259cd96d26ae36ec8711 SHA256 aa666b59962ed0c9b8e9afd7995db2e15d19f38855bbbce3b6e5d12d66b1ffd1
-MISC ChangeLog 285 RMD160 02f1056f18b2036bd61c16f0c35131ad0cbf5d93 SHA1 f943ec94ef049498670a5e7b21e5d71fd37af6ff SHA256 d60e1f70385d2c507db5058c0f52eca1d9bb1e480f4a35badb0ac6cb4f080353
+EBUILD gtwitter-0.2.4.ebuild 632 RMD160 beb499bdc8a6b8f2f403983d9f7348c93ec55166 SHA1 ea0837117f16117fe0a0ac14a866a603feff3908 SHA256 adf1a4af1595e89bed635c2c6088ecd18d8c011e3e9ca9b212a7a0735c0070da
+MISC ChangeLog 407 RMD160 ed57f8144d9dd167439e5520266e51716985621e SHA1 4a09351fecf919d130f57bc3dae40ab1d7f658ea SHA256 4659fc452bfe8efedca5755d7eb0d735eaaca4d543169916002efa70ff338208
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
