@@ -1,6 +1,9 @@
 # ChangeLog for net-im/gtwitter
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  18 Apr 2009; Christian Ruppert <idl0r@gentoo.org> gtwitter-0.2.4.ebuild:
+  Added missing dependency, fixes bug 264481.
 
   01 Dec 2008; Sergio D. Rodríguez Inclan (ZeRoX) <srinclan@gmail.com>
   +gtwitter-0.2.4.ebuild, +metadata.xml:
